--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
 		"express": "^4.1.1",
 		"socket.io": "^0.9.16",
-		"logfmt":"*"
+		"logfmt":"*",
+	    "socket.io-clusterhub":"*"
   }
 }
